--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ install:
 
 script:
   - make test
-  - CARAVAN_DEBUG=0 go test -coverprofile c0.out ./...
+  - CARAVAN_DEBUG=0 go test -coverprofile c.out ./...
   - go clean -testcache
-  - CARAVAN_DEBUG=1 go test -coverprofile c1.out ./...
-  - cat c0.out c1.out > c.out
+  - CARAVAN_DEBUG=1 go test -coverprofile c.append.out ./...
+  - tail -n +2 c.append.out >> c.out
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
